fixed concerts pics width on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -757,7 +757,7 @@ aside.menu-screen.visible {
 }
 .concerts .band-concerts-container .concerts-clips-wrapper {
   margin: 0 auto;
-  width: 100%;
+  max-width: 100vw;
   width: 385px;
   height: 256px;
   position: relative;
@@ -776,6 +776,7 @@ aside.menu-screen.visible {
 .concerts .band-concerts-container .concerts-clips-wrapper .clip-container .concert-pic {
   width: 100%;
   height: 100%;
+  max-width: 100vw;
   -webkit-user-select: none;
   -moz-user-select: none;
   -o-user-select: none;
